Fixed cors issues